--- a/index.html
+++ b/index.html
@@ -57,13 +57,11 @@
         <div>
           <h1 class="slide-up">Bienvenido a mi Portafolio</h1>
           <h1 class="slide-up">soy <span>Uziel</span> Pérez Hernández</h1>
-          <h2 class="tagline">Desarrollador Frontend</h2>
+          <h2 class="tagline">Desarrollador Web</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Repellendus, iure! Sit delectus optio quos repellat quaerat placeat
+            Te ayudare a crear tus ideas y conceptos en realidad, desde el diseño de tu sitio hasta la maquetación de este, estoy para ayudarte. 
             <br />
-            totam ullam earum aut saepe inventore, doloremque dolores laudantium
-            qui voluptates repellendus!
+            Siente la libertad de revisar mis proyectos, autónomo y en constante aprendizaje. 
           </p>
           <a download href="#sobre"><button class="btn">Sobre mí</button></a>
         </div>
